<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Salvati Rosia Montana</string>
    <string name="settings">Settings</string>
    <string name="home">Menu</string>
    <string name="share">Share</string>
    <string name="donate">Donate!</string>
    <string name="follow">Follow us on FB!</string>
    
     <string name="exit_press_back_twice_message">Press back again if you want to exit!</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="pref_language">Content</string>
    <string name="pref_language_message">Please select a content channel</string>
    
    <string name="city">County</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
     
    <string name="city_mesage">Select your county</string>
    <string name="comm_error_text">Communication error</string>
    <string name="comm_error_msg_text">The server is not available at the moment. Please try again later.</string>
    <string name="ok_text">OK</string>
    <string name="send">Send</string>

</resources>
